Add creation of hs-dataset

--- a/transformer-notebook.ipynb
+++ b/transformer-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -99,20 +99,20 @@
        "4                        Sons of ****,  negative  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lets initially load the data (Kaggle dataset containing different tweets and their sentiment)\n",
-    "tweets_df = pd.read_csv(\"data/Tweets.csv\")\n",
+    "tweets_df = pd.read_csv('data/Tweets.csv')\n",
     "tweets_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +133,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🤗 Transformers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create our Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "from transformers import AutoModel, AutoTokenizer, AutoConfig\n",
+    "from datasets import load_dataset, Dataset, DatasetDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset csv (/Users/davidbreinl/.cache/huggingface/datasets/csv/default-8bed6ed4f37d7f15/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82cc11144fa24c39a2cfc60a9a7e7204",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tweets_ds = load_dataset(\"csv\", data_dir=\"data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_ds.set_format(\"pandas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_df = tweets_ds[\"train\"][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -201,24 +276,335 @@
        "4   Sons of ****, why couldn`t they put them on t...  negative"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The only Information that we need in the following steps are: Tweets, Labels\n",
-    "tweets_df = tweets_df[[\"text\", \"sentiment\"]]\n",
+    "tweets_df.drop_duplicates(\"textID\")\n",
+    "tweets_df = tweets_df.dropna()\n",
+    "tweets_df = tweets_df.reset_index()[[\"text\", \"sentiment\"]] # as I am only interested in the text, and label here\n",
     "tweets_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['neutral', 'negative', 'positive']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I`d have responded, if I were going</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sooo SAD I will miss you here in San Diego!!!</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>my boss is bullying me...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>what interview! leave me alone</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sons of ****, why couldn`t they put them on t...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  sentiment\n",
+       "0                I`d have responded, if I were going          0\n",
+       "1      Sooo SAD I will miss you here in San Diego!!!          1\n",
+       "2                          my boss is bullying me...          1\n",
+       "3                     what interview! leave me alone          1\n",
+       "4   Sons of ****, why couldn`t they put them on t...          1"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import transformers"
+    "# Lets encode the sentiment into a numeric representation\n",
+    "class_names = list(tweets_df[\"sentiment\"].unique())\n",
+    "print(class_names)\n",
+    "\n",
+    "tweets_df[\"sentiment\"] = [class_names.index(sentiment) for sentiment in tweets_df.sentiment]\n",
+    "tweets_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text', 'sentiment'],\n",
+       "    num_rows: 27480\n",
+       "})"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_ds = Dataset.from_pandas(tweets_df)\n",
+    "tweets_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(DatasetDict({\n",
+       "     train: Dataset({\n",
+       "         features: ['text', 'sentiment'],\n",
+       "         num_rows: 21984\n",
+       "     })\n",
+       "     test: Dataset({\n",
+       "         features: ['text', 'sentiment'],\n",
+       "         num_rows: 5496\n",
+       "     })\n",
+       " }),\n",
+       " DatasetDict({\n",
+       "     train: Dataset({\n",
+       "         features: ['text', 'sentiment'],\n",
+       "         num_rows: 2748\n",
+       "     })\n",
+       "     test: Dataset({\n",
+       "         features: ['text', 'sentiment'],\n",
+       "         num_rows: 2748\n",
+       "     })\n",
+       " }))"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_testvalid = tweets_ds.train_test_split(test_size=0.2, seed=42)\n",
+    "\n",
+    "test_valid = train_testvalid[\"test\"].train_test_split(test_size=0.5, seed=42)\n",
+    "\n",
+    "train_testvalid, test_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['text', 'sentiment'],\n",
+       "        num_rows: 21984\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['text', 'sentiment'],\n",
+       "        num_rows: 2748\n",
+       "    })\n",
+       "    val: Dataset({\n",
+       "        features: ['text', 'sentiment'],\n",
+       "        num_rows: 2748\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_ds = DatasetDict({\n",
+    "    'train':train_testvalid[\"train\"],\n",
+    "    'test': test_valid[\"train\"],\n",
+    "    'val': test_valid[\"test\"]\n",
+    "})\n",
+    "\n",
+    "tweets_ds"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lets Encode the Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': [101, 2023, 2003, 1037, 3231, 1999, 2344, 2000, 2156, 2065, 1996, 4372, 16044, 2099, 2003, 2551, 102], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_checkpoint = 'distilbert-base-uncased'\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
+    "\n",
+    "tokenizer(\"this is a test in order to see if the encoder is working\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['input_ids', 'attention_mask'])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We first have to define a function that we can then apply onto our entire huggingface dataset\n",
+    "def tokenize_batch(batch):\n",
+    "    return tokenizer(batch[\"text\"], padding=True, truncation=True)\n",
+    "\n",
+    "# Lets check if the function is actually working\n",
+    "tokenize_batch(tweets_ds[\"train\"][:2]).keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec07bd81b74b45dc92b7eaa81dc455e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/21984 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e0bdec5ee5a421cb94aa62b4b99c8c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/2748 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "73bf840446814867ba5d4e6c867dc6ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/2748 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text', 'sentiment', 'input_ids', 'attention_mask'],\n",
+       "    num_rows: 21984\n",
+       "})"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_encoded = tweets_ds.map(tokenize_batch, batched=True)\n",
+    "tweets_encoded[\"train\"] # as we can see we now included the input ids and the attention mask"
    ]
   },
   {
@@ -226,10 +612,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def myfunc(x, y, z):\n",
-    "    return z"
-   ]
+   "source": []
   }
  ],
  "metadata": {
