--- a/transformer-notebook.ipynb
+++ b/transformer-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4                        Sons of ****,  negative  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,18 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import transformers\n",
-    "from transformers import AutoModel, AutoTokenizer, AutoConfig\n",
+    "from transformers import AutoModel, AutoTokenizer, AutoConfig, DataCollatorWithPadding\n",
     "from datasets import load_dataset, Dataset, DatasetDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82cc11144fa24c39a2cfc60a9a7e7204",
+       "model_id": "db9f23b08f82424bbc39c467274fd52f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "4   Sons of ****, why couldn`t they put them on t...  negative"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "4   Sons of ****, why couldn`t they put them on t...          1"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "})"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        " }))"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "})"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "{'input_ids': [101, 2023, 2003, 1037, 3231, 1999, 2344, 2000, 2156, 2065, 1996, 4372, 16044, 2099, 2003, 2551, 102], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "dict_keys(['input_ids', 'attention_mask'])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,13 +543,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec07bd81b74b45dc92b7eaa81dc455e9",
+       "model_id": "1a92bcc688db4770860e85cb76b1fa1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,7 +563,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e0bdec5ee5a421cb94aa62b4b99c8c4",
+       "model_id": "2c2ddd52a77d41939031502c2f435680",
        "version_major": 2,
        "version_minor": 0
       },
@@ -577,7 +577,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73bf840446814867ba5d4e6c867dc6ca",
+       "model_id": "104625eefeae4fd88eb57ba0cf1ced3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -597,7 +597,7 @@
        "})"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,6 +605,170 @@
    "source": [
     "tweets_encoded = tweets_ds.map(tokenize_batch, batched=True)\n",
     "tweets_encoded[\"train\"] # as we can see we now included the input ids and the attention mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# since our pytorch model will expect us to input torch tensors lets switch the format\n",
+    "\n",
+    "tweets_encoded.set_format(\"torch\",\n",
+    "                          columns=[\"input_ids\", \"attention_mask\", \"sentiment\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sentiment': tensor([2, 0]),\n",
+       " 'input_ids': tensor([[  101,  2123,  1036,  1056,  2292,  1996,  3103,  4608,  2017,  6933,\n",
+       "           1011,  2821,  2026,  1012,  1012,  2061,  4658,  8299,  1024,  1013,\n",
+       "           1013,  4714,  3126,  2140,  1012,  4012,  1013, 12731,  6292,  2620,\n",
+       "           2278,   102,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0],\n",
+       "         [  101, 20767,  3251,  2000,  2175,  2000,  2793,  1998,  2707,  3752,\n",
+       "           1996,  2197,  4302, 10693,  2338,  1010,  2130,  2295,  2004,  2574,\n",
+       "           2004,  1045,  2707,  3752,  2009,  1010,  1045,  2180,  1036,  1056,\n",
+       "          10587,  2644,   102,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "              0,     0,     0,     0,     0,     0,     0,     0]]),\n",
+       " 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "          1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "          1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0]])}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_encoded[\"train\"][:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lets now Train a custom Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_projector.weight', 'vocab_layer_norm.bias', 'vocab_transform.weight', 'vocab_projector.bias', 'vocab_transform.bias', 'vocab_layer_norm.weight']\n",
+      "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = AutoModel.from_pretrained(model_checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DistilBertConfig {\n",
+       "  \"_name_or_path\": \"distilbert-base-uncased\",\n",
+       "  \"activation\": \"gelu\",\n",
+       "  \"architectures\": [\n",
+       "    \"DistilBertForMaskedLM\"\n",
+       "  ],\n",
+       "  \"attention_dropout\": 0.1,\n",
+       "  \"dim\": 768,\n",
+       "  \"dropout\": 0.1,\n",
+       "  \"hidden_dim\": 3072,\n",
+       "  \"initializer_range\": 0.02,\n",
+       "  \"max_position_embeddings\": 512,\n",
+       "  \"model_type\": \"distilbert\",\n",
+       "  \"n_heads\": 12,\n",
+       "  \"n_layers\": 6,\n",
+       "  \"pad_token_id\": 0,\n",
+       "  \"qa_dropout\": 0.1,\n",
+       "  \"seq_classif_dropout\": 0.2,\n",
+       "  \"sinusoidal_pos_embds\": false,\n",
+       "  \"tie_weights_\": true,\n",
+       "  \"transformers_version\": \"4.26.1\",\n",
+       "  \"vocab_size\": 30522\n",
+       "}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AutoConfig.from_pretrained(model_checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modeling.model import TweetClassificationModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_projector.weight', 'vocab_layer_norm.bias', 'vocab_transform.weight', 'vocab_projector.bias', 'vocab_transform.bias', 'vocab_layer_norm.weight']\n",
+      "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "MODEL_CHKPT = 'distilbert-base-uncased'\n",
+    "\n",
+    "model = TweetClassificationModel(checkpoint=MODEL_CHKPT, num_classes=len(class_names))"
    ]
   },
   {
