Add predictions on custom text

--- a/transformer-notebook.ipynb
+++ b/transformer-notebook.ipynb
@@ -1764,6 +1764,49 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lets make some predictions on a custom text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_prediction(text: str, labels: list):\n",
+    "    tokenized_input = tokenizer(text, return_tensors=\"pt\")\n",
+    "    prediction_logits = model(**tokenized_input.to(torch.device(\"mps\")))\n",
+    "    pred_id = torch.argmax(prediction_logits.logits, dim=1)\n",
+    "    return class_names[pred_id.item()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'positive'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"I think it is amazing that I am now able to classify different tweets\"\n",
+    "\n",
+    "make_prediction(text, class_names)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
