Put inference function into inference.py

--- a/transformer-notebook.ipynb
+++ b/transformer-notebook.ipynb
@@ -1773,20 +1773,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_prediction(text: str, labels: list):\n",
-    "    tokenized_input = tokenizer(text, return_tensors=\"pt\")\n",
-    "    prediction_logits = model(**tokenized_input.to(torch.device(\"mps\")))\n",
-    "    pred_id = torch.argmax(prediction_logits.logits, dim=1)\n",
-    "    return class_names[pred_id.item()]"
+    "from modeling.inference import make_prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1791,7 @@
        "'positive'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1803,7 +1799,7 @@
    "source": [
     "text = \"I think it is amazing that I am now able to classify different tweets\"\n",
     "\n",
-    "make_prediction(text, class_names)"
+    "make_prediction(text=text, model=model, labels=class_names, tokenizer=tokenizer)"
    ]
   },
   {
