Add updated rq.txt and some comments on model.py

--- a/transformer-notebook.ipynb
+++ b/transformer-notebook.ipynb
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1694,6 +1694,76 @@
        "      <td>positive</td>\n",
        "      <td>4.800998</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>Looking for accessories for my #livescribe smartpen.. not many sources here in germany for it.</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>4.773015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946</th>\n",
+       "      <td>Loll whats boyfriend #2 supposed to mean then?  its to cold</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>4.768201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>The Disney Store is not treating me to well with hours  I realy want to go on 6/13. I willdo anythig to go to the show ;-)</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>4.737074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>dunno. Maybe the flu. I feel a bitbetter now.</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>4.700142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1848</th>\n",
+       "      <td>Im so full. Subway was bomb! Waiting for my 2nd shift to start</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>4.680605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2529</th>\n",
+       "      <td>Trying to get some work done not too happy about work situation</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>4.535342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706</th>\n",
+       "      <td>Im sure the 5 ppl who came in after me will be seen by a dentist before I will</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>4.507309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2567</th>\n",
+       "      <td>WHAT?! i was wanting to see that show!!</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>4.372140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1678</th>\n",
+       "      <td>Flap-a-taco was nice until the plebs came in.</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>4.349820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>526</th>\n",
+       "      <td>msn-ing. no school  shouldn`t there be more bank holidays? x</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>4.339990</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1720,6 +1790,16 @@
        "130                                                                         I stung myself with stinging nettles all down my shin   \n",
        "777                                                                                         thought I was going to have a fun day   \n",
        "1205                                                              The hair looks sicckkkk.  Happy mothers day to all the mothers!   \n",
+       "514                                Looking for accessories for my #livescribe smartpen.. not many sources here in germany for it.   \n",
+       "1946                                                                  Loll whats boyfriend #2 supposed to mean then?  its to cold   \n",
+       "117    The Disney Store is not treating me to well with hours  I realy want to go on 6/13. I willdo anythig to go to the show ;-)   \n",
+       "151                                                                                 dunno. Maybe the flu. I feel a bitbetter now.   \n",
+       "1848                                                               Im so full. Subway was bomb! Waiting for my 2nd shift to start   \n",
+       "2529                                                              Trying to get some work done not too happy about work situation   \n",
+       "706                                                Im sure the 5 ppl who came in after me will be seen by a dentist before I will   \n",
+       "2567                                                                                      WHAT?! i was wanting to see that show!!   \n",
+       "1678                                                                                Flap-a-taco was nice until the plebs came in.   \n",
+       "526                                                                  msn-ing. no school  shouldn`t there be more bank holidays? x   \n",
        "\n",
        "     sentiment predicted_label      loss  \n",
        "2663  negative        positive  6.349749  \n",
@@ -1741,16 +1821,26 @@
        "906   positive         neutral  4.905297  \n",
        "130    neutral        negative  4.904227  \n",
        "777    neutral        positive  4.873482  \n",
-       "1205   neutral        positive  4.800998  "
+       "1205   neutral        positive  4.800998  \n",
+       "514   negative         neutral  4.773015  \n",
+       "1946  negative         neutral  4.768201  \n",
+       "117   positive        negative  4.737074  \n",
+       "151   positive        negative  4.700142  \n",
+       "1848  positive        negative  4.680605  \n",
+       "2529  positive        negative  4.535342  \n",
+       "706   negative         neutral  4.507309  \n",
+       "2567  negative         neutral  4.372140  \n",
+       "1678  negative        positive  4.349820  \n",
+       "526   positive         neutral  4.339990  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loss_df.sort_values(\"loss\", ascending=False).head(20)"
+    "loss_df.sort_values(\"loss\", ascending=False).head(30)"
    ]
   },
   {
@@ -1819,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,22 +1918,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'positive'"
+       "'negative'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = \"I think it is amazing that I am now able to classify different tweets\"\n",
+    "text = \"I hate it\"\n",
     "\n",
     "make_predictions(text=text, model=model, labels=class_names, tokenizer=tokenizer)"
    ]
