Add predictions on custom text

--- a/transformer-notebook-tweets-multi-class.ipynb
+++ b/transformer-notebook-tweets-multi-class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,6 +1407,45 @@
    ],
    "source": [
     "plot_confusion_matrix(loss_df[\"predicted_label\"], loss_df[\"sentiment\"], labels=class_names)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make some predictions on custom text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modeling.inference import make_predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'joy'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"It's really cool that I am now able to classify some tweets\"\n",
+    "\n",
+    "make_predictions(text, class_names, tokenizer, trained_model)"
    ]
   },
   {
