Add refactoring to directorys, add initial dockerfile

--- a/transformer-notebook-tweets-multi-class.ipynb
+++ b/transformer-notebook-tweets-multi-class.ipynb
@@ -662,11 +662,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.model import TweetClassificationModel\n",
-    "from modeling.train import Model_training\n",
+    "from app.modeling.model import TweetClassificationModel\n",
+    "from app.modeling.train import Model_training\n",
     "import torch\n",
     "from transformers import get_scheduler\n",
-    "from modeling.model_utils import EarlyStopper"
+    "from app.modeling.model_utils import EarlyStopper"
    ]
   },
   {
@@ -923,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.model import TweetClassificationModel"
+    "from app.modeling.model import TweetClassificationModel"
    ]
   },
   {
@@ -962,7 +962,7 @@
     }
    ],
    "source": [
-    "trained_model.load_state_dict(torch.load(\"modeling/models/distilbert-base-finetuned-for-tweet-classification.pth\"))"
+    "trained_model.load_state_dict(torch.load(\"app/modeling/models/distilbert-base-finetuned-for-tweet-classification.pth\"))"
    ]
   },
   {
@@ -1460,7 +1460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.inference import make_predictions\n"
+    "from app.modeling.inference import make_predictions\n"
    ]
   },
   {
