Add notebook that can be reused to quickly visualize model performance in confusion matrix

--- a/transformer-notebook-tweets-multi-class.ipynb
+++ b/transformer-notebook-tweets-multi-class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bc958ea9f244cd8974799f23bced408",
+       "model_id": "58f610b9bbe34d6d882cf4793c256995",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "['sadness', 'joy', 'love', 'anger', 'fear', 'surprise']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>i can go from feeling so hopeless to so damned...</td>\n",
+       "      <td>i can go from feeling so hopeless to so damned hopeful just from being around someone who cares and is awake</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -194,7 +194,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>i am ever feeling nostalgic about the fireplac...</td>\n",
+       "      <td>i am ever feeling nostalgic about the fireplace i will know that it is still on the property</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -209,12 +209,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15995</th>\n",
-       "      <td>i just had a very brief time in the beanbag an...</td>\n",
+       "      <td>i just had a very brief time in the beanbag and i said to anna that i feel like i have been beaten up</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15996</th>\n",
-       "      <td>i am now turning and i feel pathetic that i am...</td>\n",
+       "      <td>i am now turning and i feel pathetic that i am still waiting tables and subbing with a teaching degree</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -224,12 +224,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15998</th>\n",
-       "      <td>i feel like this was such a rude comment and i...</td>\n",
+       "      <td>i feel like this was such a rude comment and im glad that t</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15999</th>\n",
-       "      <td>i know a lot but i feel so stupid because i ca...</td>\n",
+       "      <td>i know a lot but i feel so stupid because i can not portray it</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -238,23 +238,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                    text  label\n",
-       "0                                i didnt feel humiliated      0\n",
-       "1      i can go from feeling so hopeless to so damned...      0\n",
-       "2       im grabbing a minute to post i feel greedy wrong      3\n",
-       "3      i am ever feeling nostalgic about the fireplac...      2\n",
-       "4                                   i am feeling grouchy      3\n",
-       "...                                                  ...    ...\n",
-       "15995  i just had a very brief time in the beanbag an...      0\n",
-       "15996  i am now turning and i feel pathetic that i am...      0\n",
-       "15997                     i feel strong and good overall      1\n",
-       "15998  i feel like this was such a rude comment and i...      3\n",
-       "15999  i know a lot but i feel so stupid because i ca...      0\n",
+       "                                                                                                               text  \\\n",
+       "0                                                                                           i didnt feel humiliated   \n",
+       "1      i can go from feeling so hopeless to so damned hopeful just from being around someone who cares and is awake   \n",
+       "2                                                                  im grabbing a minute to post i feel greedy wrong   \n",
+       "3                      i am ever feeling nostalgic about the fireplace i will know that it is still on the property   \n",
+       "4                                                                                              i am feeling grouchy   \n",
+       "...                                                                                                             ...   \n",
+       "15995         i just had a very brief time in the beanbag and i said to anna that i feel like i have been beaten up   \n",
+       "15996        i am now turning and i feel pathetic that i am still waiting tables and subbing with a teaching degree   \n",
+       "15997                                                                                i feel strong and good overall   \n",
+       "15998                                                   i feel like this was such a rude comment and im glad that t   \n",
+       "15999                                                i know a lot but i feel so stupid because i can not portray it   \n",
+       "\n",
+       "       label  \n",
+       "0          0  \n",
+       "1          0  \n",
+       "2          3  \n",
+       "3          2  \n",
+       "4          3  \n",
+       "...      ...  \n",
+       "15995      0  \n",
+       "15996      0  \n",
+       "15997      1  \n",
+       "15998      3  \n",
+       "15999      0  \n",
        "\n",
        "[16000 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +313,7 @@
        "['i', 'didnt', 'feel', 'humiliated']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +342,7 @@
        "<AxesSubplot: xlabel='label_names', ylabel='tweet_word_count'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -366,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +398,7 @@
        "          1996,  4372, 16044,  2099,  2003,  2551,   102]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +428,7 @@
        "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +479,7 @@
        "})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +500,7 @@
        "{87}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,13 +1497,6 @@
     "\n",
     "make_predictions(text, class_names, tokenizer, trained_model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
