Add frontend and balancing of dataset with random oversampling

--- a/transformer-notebook-tweets-multi-class.ipynb
+++ b/transformer-notebook-tweets-multi-class.ipynb
@@ -679,7 +679,7 @@
     "from app.modeling.train import Model_training\n",
     "import torch\n",
     "from transformers import get_scheduler\n",
-    "from app.modeling.model_utils import EarlyStopper"
+    "from app.modeling.utils.model_utils import EarlyStopper"
    ]
   },
   {
